[project]
name = "notknock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "modlib",
    "numpy>=1.26.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
modlib = { path = "../aitrios-rpi-application-module-library" }
